      installLabelPath has been fixed (bz #961). 
    * Don't create a rollback status file when one isn't needed (this allows
      /var/lib/conarydb to be on read-only media and have queries continue
      to work)
    * Reworked "conary remove" to improve error messages and fix problems
      with multiple files being specified, broken symlinks, and relative
      paths (bz #853, #854)

  o Client changes:
    * The rollback command now applies rollbacks up to and including the
      rollback number specified on the command line. It also allows the
      user to specify the number of rollbacks to apply (from the top of
      the stack) instead of which rollback to apply. (bz #884)
    * The path for installing files as part of a new trove involved taking
      an exception. That has been changed to avoid that overhead and
      thus speed up the install.

  o Build Changes:
    * The cvc command now has a --show-buildreqs option that prints all
      build requirements.  The --no-deps argument for cvc has been
      aliased to --ignore-buildreqs for consistency.

Changes in 1.0.11:
  o Client Changes:
    * Conary will now allow generic options to be placed before the command
      you are giving to conary.  For example, 'conary --root=/foo query'
      will now work.
    * the remove command no longer removes file tags from files for no good 
      reason
    * rollbacks now restore files from other troves which are replaced as part
      of an update (thanks to, say, --replace-files or identical contents)
    * --replace-files now marks files as owned by the trove which used to
      claim them
    * You can now kill conary with SIGUSR1 to make conary enter a debugger
      when you Ctrl-C (or a SIGINT is raised)
    * --debug-all now enters a debugger in more situations, including option
      parsing fails, and when you hit Ctrl-C.
    * added ccs2tar, which will convert most absolute changesets (like those
      that cook produces) into tarballs